--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
-    "google-search": "0.0.5"
+    "google-search": "0.0.5",
+    "mongodb": "^2.2.19"
   }
 }
