--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "express": "^4.14.0",
     "google-search": "0.0.5",
     "mongodb": "^2.2.19"
+  },
+  "engines": {
+    "node": "6.11.1"
   }
 }
